# ur_workshop

./: grasp_box.urdf
gazebo_ros_pkgs_new/gazebo_plugins_new/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
gazebo_ros_pkgs_new/gazebo_plugins_new/cfg/: CameraSynchronizer.cfg  GazeboRosCamera.cfg  GazeboRosOpenniKinect.cfg  Hokuyo.cfg
gazebo_ros_pkgs_new/gazebo_plugins_new/include/gazebo_plugins/: gazebo_ros_bumper.h  gazebo_ros_diff_drive.h  gazebo_ros_force.h  gazebo_ros_ft_sensor.h  gazebo_ros_joint_pose_trajectory.h  gazebo_ros_joint_state_publisher.h  gazebo_ros_joint_trajectory.h  gazebo_ros_laser.h  gazebo_ros_planar_move.h  gazebo_ros_projector.h  gazebo_ros_skid_steer_drive.h  gazebo_ros_tricycle_drive.h  gazebo_ros_vacuum_gripper.h
gazebo_ros_pkgs_new/gazebo_plugins_new/scripts/: gazebo_model  set_pose.py  set_wrench.py  test_range.py
gazebo_ros_pkgs_new/gazebo_plugins_new/src/: gazebo_ros_block_laser.cpp  gazebo_ros_bumper.cpp  gazebo_ros_camera.cpp  gazebo_ros_camera_utils.cpp  gazebo_ros_depth_camera.cpp  gazebo_ros_diff_drive.cpp  gazebo_ros_elevator.cpp  gazebo_ros_f3d.cpp  gazebo_ros_force.cpp  gazebo_ros_ft_sensor.cpp  gazebo_ros_gpu_laser.cpp  gazebo_ros_hand_of_god.cpp  gazebo_ros_harness.cpp  gazebo_ros_imu.cpp  gazebo_ros_imu_sensor.cpp  gazebo_ros_joint_pose_trajectory.cpp  gazebo_ros_joint_trajectory.cpp  gazebo_ros_laser.cpp  gazebo_ros_multicamera.cpp  gazebo_ros_p3d.cpp  gazebo_ros_planar_move.cpp  gazebo_ros_projector.cpp  gazebo_ros_prosilica.cpp  gazebo_ros_range.cpp  gazebo_ros_skid_steer_drive.cpp  gazebo_ros_template.cpp  gazebo_ros_tricycle_drive.cpp  gazebo_ros_triggered_camera.cpp  gazebo_ros_triggered_multicamera.cpp  gazebo_ros_utils.cpp  gazebo_ros_vacuum_gripper.cpp  vision_reconfigure.cpp
gazebo_ros_pkgs_new/gazebo_plugins_new/src/gazebo_plugins/: gazebo_plugins_interface.py
gazebo_ros_pkgs_new/gazebo_plugins_new/test/: pub_joint_trajectory_test.cpp
gazebo_ros_pkgs_new/gazebo_plugins_new/test/bumper_test/: gazebo_ros_bumper.world  test_bumper.launch  test_bumper.py
gazebo_ros_pkgs_new/gazebo_plugins_new/test/camera/: camera.test  camera.world  camera16bit.test  camera16bit.world  depth_camera.test  depth_camera.world  distortion_barrel.test  distortion_barrel.world  distortion_pincushion.test  distortion_pincushion.world  multicamera.test  multicamera.world  triggered_camera.test  triggered_camera.world
gazebo_ros_pkgs_new/gazebo_plugins_new/test/config/: example_models.yaml
gazebo_ros_pkgs_new/gazebo_plugins_new/test/multi_robot_scenario/launch/: multi_robot_scenario.launch  pioneer3dx.gazebo.launch
gazebo_ros_pkgs_new/gazebo_plugins_new/test/p3d_test/: test_3_double_pendulums.launch  test_3_single_pendulums.launch  test_double_pendulum.launch  test_link_pose.py  test_single_pendulum.launch
gazebo_ros_pkgs_new/gazebo_plugins_new/test/p3d_test/worlds/: 3_double_pendulums.world  3_single_pendulums.world  (+2 more)
gazebo_ros_pkgs_new/gazebo_plugins_new/test/range/: range_plugin.test
gazebo_ros_pkgs_new/gazebo_plugins_new/test/set_model_state_test/: set_model_state_test.cpp  set_model_state_test.test
gazebo_ros_pkgs_new/gazebo_plugins_new/test/spawn_test/: parameter_server_test.launch  spawn_robots.sh
gazebo_ros_pkgs_new/gazebo_plugins_new/test/test_worlds/: bumper_test.world  elevator.world  gazebo_ros_block_laser.world  gazebo_ros_camera.world  gazebo_ros_depth_camera.world  gazebo_ros_gpu_laser.world  gazebo_ros_laser.world  gazebo_ros_range.world  gazebo_ros_trimesh_collision.world  test_lasers.world
gazebo_ros_pkgs_new/gazebo_plugins_new/test2/large_models/: large_model.urdf.xacro  smaller_large_model.urdf.xacro
gazebo_ros_pkgs_new/gazebo_ros_new/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
gazebo_ros_pkgs_new/gazebo_ros_new/cfg/: Physics.cfg
gazebo_ros_pkgs_new/gazebo_ros_new/include/gazebo_ros/: gazebo_ros_api_plugin.h
gazebo_ros_pkgs_new/gazebo_ros_new/launch/: elevator_world.launch  empty_world.launch  mud_world.launch  range_world.launch  rubble_world.launch  shapes_world.launch  willowgarage_world.launch
gazebo_ros_pkgs_new/gazebo_ros_new/scripts/: debug  gazebo  gzclient  gzserver  libcommon.sh  perf  spawn_model
gazebo_ros_pkgs_new/gazebo_ros_new/src/: gazebo_ros_api_plugin.cpp  gazebo_ros_paths_plugin.cpp
gazebo_ros_pkgs_new/gazebo_ros_new/src/gazebo_ros/: gazebo_interface.py
gazebo_ros_pkgs_new/gazebo_ros_pkgs_new/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+50 files in other folders)
