<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_new</name>
  <version>2.5.19</version>
  <description>
    Provides ROS plugins that offer message and service publishers for interfacing with <a href="http://gazebosim.org">Gazebo</a> through ROS.
    Formally simulator_gazebo/gazebo
  </description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_new_pkgs_new/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_new_pkgs_new</url>

  <author>John Hsu</author>
  <author>Nate Koenig</author>
  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo_dev_new</build_depend>
  <!--
    Need to use gazebo_dev_new since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_new_pkgs_new/issues/323 for more info
  -->
  <exec_depend>gazebo_dev_new</exec_depend>
  <depend>gazebo_msgs_new</depend>
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tinyxml</depend>

</package>
